--- a/studio_castle/index.html
+++ b/studio_castle/index.html
@@ -4,6 +4,7 @@
 
 <script src="rtge/rtge.js"></script>
 <script src="js/studio.js"></script>
+<script src="js/level1.js"></script>
 
 <script src="tilemaps/level1.js"></script>
 
