--- a/studio_castle/index.html
+++ b/studio_castle/index.html
@@ -5,8 +5,10 @@
 <script src="rtge/rtge.js"></script>
 <script src="js/studio.js"></script>
 <script src="js/level1.js"></script>
+<script src="js/level2.js"></script>
 
 <script src="tilemaps/level1.js"></script>
+<script src="tilemaps/level2.js"></script>
 
 <style>
 	#screen_sizer {
