--- a/studio_castle/index.html
+++ b/studio_castle/index.html
@@ -6,9 +6,11 @@
 <script src="js/studio.js"></script>
 <script src="js/level1.js"></script>
 <script src="js/level2.js"></script>
+<script src="js/level3.js"></script>
 
 <script src="tilemaps/level1.js"></script>
 <script src="tilemaps/level2.js"></script>
+<script src="tilemaps/level3.js"></script>
 
 <style>
 	#screen_sizer {
