--- a/studio_castle/index.html
+++ b/studio_castle/index.html
@@ -7,10 +7,12 @@
 <script src="js/level1.js"></script>
 <script src="js/level2.js"></script>
 <script src="js/level3.js"></script>
+<script src="js/level4.js"></script>
 
 <script src="tilemaps/level1.js"></script>
 <script src="tilemaps/level2.js"></script>
 <script src="tilemaps/level3.js"></script>
+<script src="tilemaps/level4.js"></script>
 
 <style>
 	#screen_sizer {
