--- a/studio_castle/index.html
+++ b/studio_castle/index.html
@@ -9,12 +9,14 @@
 <script src="js/level3.js"></script>
 <script src="js/level4.js"></script>
 <script src="js/level5.js"></script>
+<script src="js/level6.js"></script>
 
 <script src="tilemaps/level1.js"></script>
 <script src="tilemaps/level2.js"></script>
 <script src="tilemaps/level3.js"></script>
 <script src="tilemaps/level4.js"></script>
 <script src="tilemaps/level5.js"></script>
+<script src="tilemaps/level6.js"></script>
 
 <style>
 	#screen_sizer {
