--- a/studio_castle/index.html
+++ b/studio_castle/index.html
@@ -4,6 +4,7 @@
 
 <script src="rtge/rtge.js"></script>
 <script src="js/studio.js"></script>
+<script src="js/title.js"></script>
 <script src="js/level1.js"></script>
 <script src="js/level2.js"></script>
 <script src="js/level3.js"></script>
@@ -11,6 +12,7 @@
 <script src="js/level5.js"></script>
 <script src="js/level6.js"></script>
 
+<script src="tilemaps/title_screen.js"></script>
 <script src="tilemaps/level1.js"></script>
 <script src="tilemaps/level2.js"></script>
 <script src="tilemaps/level3.js"></script>
